# userprovided

./: .coveragerc  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  pytest.ini  requirements.txt  salted-linkcheck.ini  setup.py  tests.py
.github/workflows/: bandit.yml  codeql-analysis.yml  coverage.yml  flake8-test.yml  mac-os-test.yml  mypy.yml  poetry-build.yml  pythonpackage.yml  release.yml  ubuntu-test.yml  windows-test.yml
tests/: test_userprovided.py
userprovided/: __init__.py  _version.py  cloud.py  date.py  err.py  finance.py  geo.py  hash.py  hashing.py  mail.py  parameters.py  port.py  url.py
