[tool.poetry]
name = "userprovided"
version = "2.2.0"
description = "Validate, normalize, and convert user input: URLs, emails, dates, hashes, parameters — pure stdlib, no dependencies"
authors = ["Rüdiger Voigt <projects@ruediger-voigt.eu>"]
readme = "README.md"
license = "Apache-2.0"
packages = [{include = "userprovided"}]
keywords = ["validation", "input", "sanitization", "url", "normalize", "hashing", "email", "parameters", "user-input", "type-checking", "finance", "data-cleaning", "no-dependencies"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Utilities",
    "Topic :: Software Development :: Quality Assurance"
]
include = ["userprovided/py.typed"]

[tool.poetry.urls]
Homepage = "https://github.com/RuedigerVoigt/userprovided"
Documentation = "https://github.com/RuedigerVoigt/userprovided#readme"
Repository = "https://github.com/RuedigerVoigt/userprovided"
Changelog = "https://github.com/RuedigerVoigt/userprovided/blob/master/CHANGELOG.md"
"Bug Tracker" = "https://github.com/RuedigerVoigt/userprovided/issues"

[tool.poetry.dependencies]
python = ">=3.10"

[tool.poetry.group.dev.dependencies]
hypothesis = "*"
pytest = "*"
flake8 = "*"
mypy = "*"
bandit = "*"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
